--- a/src/app/tjs-subtraction/tjs-subtraction.component.html
+++ b/src/app/tjs-subtraction/tjs-subtraction.component.html
@@ -1,5 +1,7 @@
 <mat-card>
-    <mat-card-title>
+    <mat-card-title
+        style="color: blue;"
+    >
         Tom's Subtraction Component
     </mat-card-title>
     <mat-card-content>
