--- a/src/app/tjs-subtraction/tjs-subtraction.component.html
+++ b/src/app/tjs-subtraction/tjs-subtraction.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title
-        style="color: yellow;"
+        style="color: darkgray;"
     >
         Tom's Subtraction Component
     </mat-card-title>
